# nma

./: AUTHORS  Makefile  Makefile.in  README  autogen.sh  build.sh  configure.ac  inih.c  main.c  nma.h
src/: Makefile.am  Makefile.in  nma.h
